--- a/requirements.txt
+++ b/requirements.txt
@@ -102,7 +102,7 @@ num2words==0.5.14
 numba==0.60.0
 numpy==1.26.4
 ollama==0.4.7
-openai-whisper==20240930
+# openai-whisper==20240930
 orjson==3.10.15
 packaging==24.2
 pandas==2.2.3
@@ -121,7 +121,7 @@ propcache==0.3.0
 psycopg==3.2.4
 psycopg-binary==3.2.4
 psycopg2-binary==2.9.10
-PyAudio==0.2.14
+# PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.1
