--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ azure-ai-inference==1.0.0b9
 azure-core==1.34.0
 babel==2.17.0
 beautifulsoup4==4.13.3
+whitenoise==6.6.0
 blis==1.2.0
 catalogue==2.0.10
 certifi==2024.8.30
